Promote pointer function arguments and return values to Pmode.

2011-03-29  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/47725
	PR target/48085
	* calls.c (precompute_register_parameters): Convert pointer to
	TLS symbol if needed.

	* config/i386/i386.c (ix86_promote_function_mode): New.
	(TARGET_PROMOTE_FUNCTION_MODE): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/x32@171878 138bc75d-0d04-0410-961f-82ee72b054a4